# club-nsroma

./: .env  Cargo.toml  Makefile  docker-compose.yaml
entity/: Cargo.toml
entity/src/: accounts.rs  ban_records.rs  bookings.rs  branches.rs  carousels.rs  categories.rs  contact_lists.rs  countries.rs  custom_cocktails.rs  customers.rs  departments.rs  employees.rs  events.rs  externals.rs  freebies.rs  guest_bookings.rs  medias.rs  mod.rs  order_items.rs  orders.rs  organizations.rs  permissions.rs  prelude.rs  promos.rs  referrals.rs  role_permissions.rs  roles.rs  schedules.rs  staff_leaves.rs  staff_shifts.rs  stock_drinks.rs  stock_foods.rs  suppliers.rs  ticket_events.rs  tickets.rs  till_sessions.rs  tips.rs  transactions.rs  users.rs  wallet_topups.rs  (+1 more)
migration/src/: lib.rs  m20250310_181001_create_media.rs  m20250311_100140_create_countries.rs  m20250311_102524_create_organizations.rs  m20250311_110557_create_contact_lists.rs  m20250311_111857_create_branches.rs  m20250311_113056_create_departments.rs  m20250311_114321_create_staff.rs  m20250311_123539_create_schedule.rs  m20250311_125624_create_events.rs  m20250311_131422_create_freebies.rs  m20250311_132020_create_stock_drinks.rs  m20250311_133559_create_stock_foods.rs  m20250311_134128_create_category.rs  m20250311_134626_create_suppliers.rs  m20250311_135726_create_customers.rs  m20250311_140939_create_custom_cocktails.rs  m20250311_142305_create_wallets.rs  m20250311_165323_create_transactions.rs  m20250311_171654_create_accounts.rs  m20250311_172648_create_wallet_topups.rs  m20250311_173900_create_externals.rs  m20250311_174956_create_bookings.rs  m20250311_180431_create_guest_bookings.rs  m20250311_183402_create_orders.rs  m20250311_203009_create_order_items.rs  m20250311_204711_create_tips.rs  m20250311_210343_create_carousels.rs  m20250312_092226_create_ticket_events.rs  m20250312_094550_create_tickets.rs  m20250312_100734_create_staff_shifts.rs  m20250312_101358_create_staff_leaves.rs  m20250312_105209_create_till_sessions.rs  m20250312_111549_create_promotions.rs  m20250312_112345_create_referrals.rs  m20250312_113411_create_roles.rs  m20250312_113839_create_permissions.rs  m20250312_114351_create_role_permissions.rs  m20250317_161334_create_users.rs  m20250408_170934_create_ban_records.rs
src/: app.config.toml  main.rs
src/app/: mod.rs
src/app/branch/controllers/: controller.rs
src/app/branch/dtos/: dto.rs
src/app/branch/models/: model.rs
src/app/branch/routes/: route.rs
src/app/country/controllers/: controller.rs
src/app/country/dtos/: dto.rs
src/app/country/models/: model.rs
src/app/country/routes/: route.rs
src/app/customers/: mod.rs
src/app/customers/controllers/: controller.rs
src/app/customers/dtos/: dto.rs
src/app/customers/models/: model.rs
src/app/customers/routes/: route.rs
src/app/departments/controllers/: controller.rs
src/app/departments/dtos/: dto.rs
src/app/departments/models/: model.rs
src/app/events/: mod.rs
src/app/files_manager/: file_api.rs
src/app/schedules/: mod.rs
src/jobs/: job.rs  mod.rs
src/libs/: error.rs  jwt.rs  mod.rs  password.rs  validator.rs
src/mailer/: mailer.rs  mod.rs  model.rs
src/middlewares/: auth.rs  checker.rs  helmet.rs  mod.rs
src/setup/db/: pg.rs
src/utils/: file_methods.rs  json_validator.rs  mod.rs  models.rs  shared.rs
(+20 files in other folders)
