[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
actix-cors = "0.7.0"
actix-http = "3.10.0"
actix-web = "4.10.2"
actix-web-lab = "0.23.0"
base64 = "0.22.1"
chrono = "0.4.40"
config = "0.15.9"
dotenvy = "0.15.7"
env_logger = "0.11.7"
futures = "0.3.31"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
log = "0.4.26"
md5 = "0.7.0"
rand = "0.9.0"
regex = "1.11.1"
reqwest = "0.12.12"
sea-orm = { version = "1.1.7", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tokio = { version = "1.44.0", features = ["full"] }
uuid = { version = "1.15.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.20.0", features = ["derive"] }
once_cell = "1.21.1"
