[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
actix-cors = "0.7.0"
actix-http = "3.10.0"
actix-web = "4.10.2"
actix-web-lab = "0.23.0"
base64 = "0.22.1"
chrono = "0.4.40"
config = "0.15.9"
dotenvy = "0.15.7"
env_logger = "0.11.7"
futures = "0.3.31"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
log = "0.4.26"
md5 = "0.7.0"
rand = "0.9.0"
regex = "1.11.1"
reqwest = "0.12.12"
sea-orm = { version = "1.1.7", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tokio = { version = "1.44.0", features = ["full"] }
uuid = { version = "1.15.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.20.0", features = ["derive"] }
once_cell = "1.21.1"
lettre = "0.11.15"
bcrypt = "0.17.0"
hex = "0.4.3"
tokio-cron-scheduler = "0.13.0"

[profile.dev]
opt-level = 1                  # Slight optimizations for faster runtime while keeping build times low
debug = true                   # Keep debug symbols for development tools
debug-assertions = true        # Enable assertions like `assert!`
overflow-checks = true         # Enable integer overflow checks
incremental = true             # Faster recompilation by caching intermediate results

[profile.release]
opt-level = "z"                # Optimize for size (use "3" for max performance instead)
lto = "thin"                   # Link Time Optimization for better performance with reasonable compile time
codegen-units = 1              # Better optimization at cost of compile time
debug = false                  # Strip debug symbols (set to true if you want line info for crash reports)
strip = "symbols"              # Strip symbols to reduce binary size
panic = "abort"                # Smaller binary and faster panics (ensure you don't need backtraces)
incremental = false            # Disable incremental to reduce final binary size
overflow-checks = true        # Slightly faster, you can set to true if safety > speed

[profile.release-lto]          # Optional: full LTO profile for ultra-optimized builds
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = 3
